CLOSED - task 244: Check resource row icons wrapping correctly on mobile http://github.com/mpowering/django-orb/issues/issue/244

--- a/orb/static/orb/style.css
+++ b/orb/static/orb/style.css
@@ -279,6 +279,7 @@ div.resourcetag {
 
 img.resource-row-icon {
 	opacity: .6;
+	margin-bottom: 10px;
 }
 
 img.resource-row-icon:hover {
@@ -297,6 +298,7 @@ img.resource-row-icon:hover {
 	color: #fff;
 	padding: 0 8px 0 0;
 	vertical-align: bottom;
+	margin-bottom: 10px;
 }
 
 .resource-row-study-time:hover {
